kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news
spec:
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
      - name: news
        image: ghcr.io/layer-systems/news:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
