kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news
spec:
  selector:
    app: news
  ports:
  - port: 80
    targetPort: 80
